--- a/style/styles.css
+++ b/style/styles.css
@@ -1,16 +1,72 @@
-.view{
-    width: 450;
-    height: 450px;
-    display: flex;
-    flex-direction: column;
+.view {
+  width: 450px;
+  height: 450px;
+  display: flex;
+  flex-direction: column;
 }
-.row{
-    width: 100%;
-    height: 4.5px;
-    display: flex;
-    flex-direction: row;
+.row {
+  width: 100%;
+  height: 4.5px;
+  display: flex;
+  flex-direction: row;
 }
-.cell{
-    width: 4.5px;
-    height: 4.5px;
+.cell {
+  width: 4.5px;
+  height: 4.5px;
+}
+body {
+  display: grid;
+  grid-template-columns: repeat(3, 1fr);
+  column-gap: 32px;
+  padding: 32px;
+  height: 100vh;
+}
+
+h2 {
+  font-family: "Poppins", sans-serif;
+  font-weight: 400;
+  font-style: normal;
+  text-align: center;
+  background-color: #b9b9b9;
+  color: rgb(65, 65, 65);
+  margin: 0;
+  margin-bottom: 16px;
+}
+
+.team-select {
+  width: 100%;
+  display: grid;
+  grid-template-columns: repeat(4, 1fr);
+  column-gap: 16px;
+}
+
+.stats img {
+  width: 256px;
+  height: 256px;
+}
+input,
+button {
+  margin-bottom: 16px;
+}
+.table{
+    margin-top: 16px;
+    font-family: "Poppins", sans-serif;
+    font-weight: 400;
+    font-style: normal;
+    border-radius: 16px;
+}
+.thead{
+    box-shadow: 0 0 2px 2px #ececec;
+    place-items: center;
+}
+.thead,.tr{
+    display: grid;
+    grid-template-columns: repeat(4,1fr);
+    column-gap: 16px;
+}
+.thead div, .tr div{
+    padding: 4px;
+}
+.tbody:nth-child(odd){
+    background-color: #b9b9b9;
 }
