--- a/style/styles.css
+++ b/style/styles.css
@@ -48,25 +48,66 @@ input,
 button {
   margin-bottom: 16px;
 }
-.table{
-    margin-top: 16px;
-    font-family: "Poppins", sans-serif;
-    font-weight: 400;
-    font-style: normal;
-    border-radius: 16px;
+.table {
+  margin-top: 16px;
+  font-family: "Poppins", sans-serif;
+  font-weight: 400;
+  font-style: normal;
+  border-radius: 16px;
 }
-.thead{
-    box-shadow: 0 0 2px 2px #ececec;
-    place-items: center;
+.thead {
+  box-shadow: 0 0 2px 2px #ececec;
+  place-items: center;
 }
-.thead,.tr{
-    display: grid;
-    grid-template-columns: repeat(4,1fr);
-    column-gap: 16px;
+.thead,
+.tr {
+  display: grid;
+  grid-template-columns: repeat(4, 1fr);
+  column-gap: 16px;
 }
-.thead div, .tr div{
-    padding: 4px;
+.thead div,
+.tr div {
+  padding: 4px;
 }
-.tbody:nth-child(odd){
-    background-color: #b9b9b9;
+.tbody:nth-child(odd) {
+  background-color: #b9b9b9;
+}
+
+.popup {
+  position: absolute;
+  bottom: 4rem;
+  right: 4rem;
+  color: white;
+  animation: popup 5s;
+  transition: ease-in-out 2s;
+  padding: 1rem;
+  font-family: sans-serif;
+  font-size: 1.5rem;
+  transform: translateX(200%);
+  border-radius: 4px;
+  -webkit-box-shadow: 0px 0px 13px 0px #949494;
+  box-shadow: 0px 0px 13px 0px #949494;
+}
+
+div.error {
+  background-color: #df0808;
+}
+
+div.info {
+  background-color: #4fe60f;
+}
+
+@keyframes popup {
+  0% {
+    transform: translateX(200%);
+  }
+  20% {
+    transform: translateX(0%);
+  }
+  80% {
+    transform: translateX(0%);
+  }
+  100% {
+    transform: translateX(200%);
+  }
 }
